Closed
Bug 1122794
Opened 10 years ago
Closed 10 years ago
Call SetResolutionAndScaleTo() instead of SetResolution() consistently in TabChild
Categories
(Core :: Panning and Zooming, defect)
Tracking
()
RESOLVED
FIXED
mozilla38
Tracking | Status | |
---|---|---|
firefox36 | --- | unaffected |
firefox37 | --- | wontfix |
firefox38 | --- | fixed |
b2g-v2.2 | --- | fixed |
b2g-master | --- | fixed |
People
(Reporter: botond, Assigned: botond)
References
Details
Attachments
(1 file)
1.27 KB,
patch
|
kats
:
review+
bajaj
:
approval-mozilla-b2g37+
|
Details | Diff | Splinter Review |
Bug 1076241 introduced a new API for APZ to zoom a document: by using nsIDOMWindowUtils::SetResolutionAndScaleTo() instead of nsIDOMWindowUtils::SetResolution().
As part of that change, a compositor-side transform that was previously applied unconditionally, is now only applied if the SetResolutionAndScaleTo() API is used, meaning that zooming should now always be done with the SetResolutionAndScaleTo() API.
However, one call site in TabChild still uses SetResolution() [1]. I believe this is incorrect and should be using SetResolutionAndScaleTo() instead.
I have a hypothesis that this might be causing of bug 1122324.
[1] http://mxr.mozilla.org/mozilla-central/source/dom/ipc/TabChild.cpp?rev=9ddc69b3693a#981
Assignee | ||
Comment 1•10 years ago
|
||
Assignee: nobody → botond
Attachment #8550600 -
Flags: review?(bugmail.mozilla)
Comment 2•10 years ago
|
||
Comment on attachment 8550600 [details] [diff] [review]
bug1122794.patch
Review of attachment 8550600 [details] [diff] [review]:
-----------------------------------------------------------------
Make sure to rebase, it's GetPresShellResolution() now.
Attachment #8550600 -
Flags: review?(bugmail.mozilla) → review+
Assignee | ||
Comment 3•10 years ago
|
||
Rebased and landed:
https://hg.mozilla.org/integration/mozilla-inbound/rev/6c8cf0eff888
Comment 4•10 years ago
|
||
Status: NEW → RESOLVED
Closed: 10 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla38
Assignee | ||
Comment 5•10 years ago
|
||
Comment on attachment 8550600 [details] [diff] [review]
bug1122794.patch
NOTE: Please see https://wiki.mozilla.org/Release_Management/B2G_Landing to better understand the B2G approval process and landings.
[Approval Request Comment]
Bug caused by (feature/regressing bug #):
Bug 1076241.
User impact if declined:
I haven't spent a lot of time devising STR that demonstrate
a problem, but the patch fixes an obvious mistake that can
in principle lead to a page or app, including one that isn't
zoomable, loading at an incorrect zoom in some cases.
Testing completed:
Baking on m-c since 2015-01-19.
Risk to taking this patch (and alternatives if risky):
Super-low risk. It's an obvious omission from bug 1076241
where we updated other call sites of a function, but forgot
this one.
String or UUID changes made by this patch:
None.
Attachment #8550600 -
Flags: approval-mozilla-b2g37?
Updated•10 years ago
|
Attachment #8550600 -
Flags: approval-mozilla-b2g37? → approval-mozilla-b2g37+
Comment 6•10 years ago
|
||
Needs rebasing for b2g37 uplift. Also, should we take this on Aurora as well?
status-b2g-v2.2:
--- → affected
status-b2g-master:
--- → fixed
status-firefox36:
--- → unaffected
status-firefox37:
--- → ?
status-firefox38:
--- → fixed
Flags: needinfo?(botond)
Keywords: branch-patch-needed
Comment 7•10 years ago
|
||
Flags: needinfo?(botond)
Keywords: branch-patch-needed
Assignee | ||
Comment 8•10 years ago
|
||
(In reply to Ryan VanderMeulen [:RyanVM UTC-5] from comment #6)
> Needs rebasing for b2g37 uplift.
As it happens, the patch posted in this bug (as opposed to the one that landed) is the one that applies cleanly to b2g37, so there's nothing for me to post :)
> Also, should we take this on Aurora as well?
Discussed this on IRC. TabChild is only used in e10s scenarios, and B2G is the only platform that has e10s enabled by default, so no.
You need to log in
before you can comment on or make changes to this bug.
Description
•