Bug 1122794 - Call SetResolutionAndScaleTo() instead of SetResolution() consistently in TabChild. r=kats